Homework 03-react-movies: project updated and cleaned

--- a/src/components/MovieGrid/MovieGrid.module.css
+++ b/src/components/MovieGrid/MovieGrid.module.css
@@ -13,7 +13,7 @@
 }
 
 .card {
-  width: 240px; /* Фіксована ширина картки для симетрії */
+  width: 240px;
   position: relative;
   overflow: hidden;
   border-radius: 8px;
